Fixed fl-flex link overflow

--- a/src/css/4-skeleton/flex.scss
+++ b/src/css/4-skeleton/flex.scss
@@ -1,7 +1,3 @@
-.fl-flex {
-	display: flex;
-}
-
 .fl-flex-row {
 	display: flex;
 }
@@ -11,14 +7,6 @@
 	flex-direction: column;
 }
 
-.fl-flex.row {
-	flex-direction: row;
-	gap: var(--size-3);
-	align-items: center;
+.fl-flex-column > a {
+	width: 100%;
 }
-
-.fl-flex.column {
-	flex-direction: column;
-	gap: var(--size-2);
-}
-
