--- a/src/css/5-components/split.scss
+++ b/src/css/5-components/split.scss
@@ -4,7 +4,7 @@
 
 	@media (--lg-n-below) {
 		& {
-			grid-template-columns: 1fr;
+			grid-template-columns: 1fr !important;
 			gap: inherit;
 		}
 
